# atrain_core

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  build.py  meta.yaml  pyproject.toml  setup.py
aTrain_core/: GUI_integration.py  __init__.py  app.py  archive.py  audio.py  check_inputs.py  cli.py  custom_downloader.py  custom_file_download.py  custom_snapshot_download.py  distil.py  globals.py  handle_upload.py  load_resources.py  outputs.py  pipeline.py  pyannote_customizations.py  settings.py  step_estimator.py  transcribe.py  transcription_core.py
aTrain_core/data/: formats.json  languages.json  models.json
aTrain_core/models/: models.json
aTrain_core/templates/: index.html
aTrain_core/unittest/: test_check_inputs.py
aTrain_core/unittests/: test_GUI_integration.py  test_check_inputs.py  test_cli.py  test_load_resources.py  test_step_estimator.py  test_transcribe.py
sample_data/: french_sample.mov  german_sample.mov  spanish_sample.mov
tests/: test_load_resources.py  test_outputs.py
